--- a/latex/report.tex
+++ b/latex/report.tex
@@ -1,8 +1,4 @@
-\documentclass[uplatex]{jsarticle}
-
-\usepackage{mylatex}
-\usepackage{ap3}
-\usepackage{ascmac}
+\documentclass{jarticle}
 
 \title{}
 \author{}
@@ -11,18 +7,5 @@
 \usepackage[dvipdfmx]{graphicx}
 \begin{document}
 \maketitle
-% --- main content ---
 
-% \section{ソースコード}
-% \subsection{Main}
-% \lstinputlisting[
-%   caption=Main.java,
-%   label=srcMain,
-%   language=Java
-% ]{./Main.java}
-
-% \pgref{srcMain}では...
-
-
-% --- main content ---
 \end{document}
