--- a/latex/report.tex
+++ b/latex/report.tex
@@ -4,8 +4,24 @@
 \author{}
 \date{}
 
+% \lstset{%listings の表示設定
+% breaklines = true,%自動で折り返す。
+% tabsize = 2,%tabsize
+% frame=shadowbox,%枠を上下左右に表示する
+% basicstyle = \scriptsize,%\footnotesize,
+% showstringspaces=false,%文字列中のスペースをちゃんと" "と表示。(デフォルトは文字列中のスペースは可視設定)
+% numbers=left,%行番号を左に
+% framexleftmargin=6mm,%行番号をフレーム内に
+% numberstyle=\scriptsize,%行番号のサイズ
+% stepnumber=1,%1行おきに行番号を
+% numbersep=1zw,%ソースと行番号の間隔
+% }
+
 \usepackage[dvipdfmx]{graphicx}
+\usepackage{listings}
+
 \begin{document}
 \maketitle
+% \begin{lstlisting}[caption=Main.java,numbers = left]
 
 \end{document}
