--- a/latex/report.tex
+++ b/latex/report.tex
@@ -8,6 +8,6 @@
 
 \begin{document}
 \maketitle
-% \begin{lstlisting}[caption=Main.java,numbers = left,frame = single, breakllines=true]
+% \begin{lstlisting}[caption=Main.java, numbers=left, frame=single, breaklines=true]
 
 \end{document}
