--- a/latex/report.tex
+++ b/latex/report.tex
@@ -29,5 +29,5 @@
 \begin{document}
 \maketitle
 % \begin{lstlisting}[caption=Main.java, numbers=left, frame=single, breaklines=true]
-
+% \lstinputlisting[caption=Main.java, numbers=left, frame=single, breaklines=true]{./newlang3/Main.java}
 \end{document}
