--- a/latex/report.tex
+++ b/latex/report.tex
@@ -6,6 +6,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{listings}
 \usepackage{jlisting}
+\usepackage{url}
 
 \lstset{
   basicstyle={\ttfamily},
