--- a/latex/report.tex
+++ b/latex/report.tex
@@ -7,6 +7,9 @@
 \usepackage{listings}
 \usepackage{jlisting}
 \usepackage{url}
+\usepackage{amsmath,amssymb}
+\usepackage{mathtools}
+\mathtoolsset{showonlyrefs=true}
 
 \lstset{
   basicstyle={\ttfamily},
@@ -31,4 +34,10 @@
 \maketitle
 % \begin{lstlisting}[caption=Main.java, numbers=left, frame=single, breaklines=true]
 % \lstinputlisting[caption=Main.java, numbers=left, frame=single, breaklines=true]{./newlang3/Main.java}
+
+\cite{main}
+
+\bibliographystyle{ipsjunsrt}
+\bibliography{myrefs}
+
 \end{document}
